--- a/niudot-app/package.json
+++ b/niudot-app/package.json
@@ -8,8 +8,10 @@
 		"@testing-library/user-event": "^7.1.2",
 		"react": "^16.13.1",
 		"react-bootstrap-icons": "^1.0.0",
+		"react-burger-menu": "^2.7.1",
 		"react-dom": "^16.13.1",
 		"react-icons": "^3.11.0",
+		"react-pro-sidebar": "^0.4.4",
 		"react-router-dom": "^5.2.0",
 		"react-scripts": "3.4.3",
 		"react-transition-group": "^4.4.1"
