--- a/niudot-app/package.json
+++ b/niudot-app/package.json
@@ -6,13 +6,16 @@
 		"@testing-library/jest-dom": "^4.2.4",
 		"@testing-library/react": "^9.3.2",
 		"@testing-library/user-event": "^7.1.2",
+		"formik": "^2.1.7",
 		"react": "^16.13.1",
 		"react-bootstrap-icons": "^1.0.0",
 		"react-dom": "^16.13.1",
 		"react-icons": "^3.11.0",
+		"react-pro-sidebar": "^0.4.4",
 		"react-router-dom": "^5.2.0",
 		"react-scripts": "3.4.3",
-		"react-transition-group": "^4.4.1"
+		"react-transition-group": "^4.4.1",
+		"yup": "^0.29.3"
 	},
 	"scripts": {
 		"start:react": "react-scripts start",
