--- a/niudot-app/package.json
+++ b/niudot-app/package.json
@@ -14,12 +14,8 @@
 		"react-pro-sidebar": "^0.4.4",
 		"react-router-dom": "^5.2.0",
 		"react-scripts": "3.4.3",
-		"react-scroll": "^1.8.1",
 		"react-scrolling-nav": "^1.1.5",
-		"react-select": "^3.1.0",
-		"react-transition-group": "^4.4.1",
-		"uuid": "^8.3.1",
-		"yup": "^0.29.3"
+		"uuid": "^8.3.1"
 	},
 	"scripts": {
 		"start:react": "react-scripts start",
