--- a/niudot-app/package.json
+++ b/niudot-app/package.json
@@ -15,6 +15,7 @@
 		"react-router-dom": "^5.2.0",
 		"react-scripts": "3.4.3",
 		"react-scrolling-nav": "^1.1.5",
+		"sass": "^1.29.0",
 		"uuid": "^8.3.1"
 	},
 	"scripts": {
