--- a/niudot-app/.prettierrc
+++ b/niudot-app/.prettierrc
@@ -1,16 +1,17 @@
 {
-  "singleQuote": true,
-  "semi": false,
-  "trailingComma": "none",
-  "bracketSpacing": true,
-  "jsxBracketSameLine": false,
-  "jsxSingleQuote": true,
-  "overrides": [
-    {
-      "files": ["*.js, *.jsx"],
-      "options": {
-        "tabWidth": 2
-      }
-    }
-  ]
+	"singleQuote": true,
+	"semi": false,
+	"useTabs": true,
+	"trailingComma": "none",
+	"bracketSpacing": true,
+	"jsxBracketSameLine": false,
+	"jsxSingleQuote": true,
+	"overrides": [
+		{
+			"files": ["*.js, *.jsx"],
+			"options": {
+				"tabWidth": 2
+			}
+		}
+	]
 }
