--- a/niudot-app/package.json
+++ b/niudot-app/package.json
@@ -16,7 +16,8 @@
 		"react-router-dom": "^5.2.0",
 		"react-scripts": "3.4.3",
 		"react-scrolling-nav": "^1.1.5",
-		"uuid": "^8.3.1"
+		"uuid": "^8.3.1",
+		"yup": "^0.32.1"
 	},
 	"scripts": {
 		"dev": "react-scripts start",
