--- a/niudot-app/package.json
+++ b/niudot-app/package.json
@@ -10,6 +10,7 @@
 		"formik": "^2.1.7",
 		"react": "^16.13.1",
 		"react-bootstrap-icons": "^1.0.0",
+		"react-bootstrap-table-next": "^4.0.3",
 		"react-dom": "^16.13.1",
 		"react-icons": "^3.11.0",
 		"react-pro-sidebar": "^0.4.4",
