--- a/niudot-app/package.json
+++ b/niudot-app/package.json
@@ -7,10 +7,13 @@
 		"@testing-library/react": "^9.3.2",
 		"@testing-library/user-event": "^7.1.2",
 		"axios": "^0.21.0",
+		"bootstrap": "^4.5.3",
 		"formik": "^2.1.7",
 		"react": "^16.13.1",
 		"react-bootstrap-icons": "^1.0.0",
 		"react-bootstrap-table-next": "^4.0.3",
+		"react-bootstrap-table2-editor": "^1.4.0",
+		"react-bootstrap-table2-toolkit": "^2.1.3",
 		"react-dom": "^16.13.1",
 		"react-icons": "^3.11.0",
 		"react-pro-sidebar": "^0.4.4",
