--- a/niudot-app/package.json
+++ b/niudot-app/package.json
@@ -14,6 +14,7 @@
 		"react-bootstrap-table-next": "^4.0.3",
 		"react-bootstrap-table2-editor": "^1.4.0",
 		"react-bootstrap-table2-toolkit": "^2.1.3",
+		"react-chartjs-2": "^2.11.1",
 		"react-dom": "^16.13.1",
 		"react-icons": "^3.11.0",
 		"react-pro-sidebar": "^0.4.4",
