--- a/niudot-app/package.json
+++ b/niudot-app/package.json
@@ -8,6 +8,7 @@
 		"@testing-library/user-event": "^7.1.2",
 		"axios": "^0.21.0",
 		"formik": "^2.1.7",
+		"namor": "^2.0.2",
 		"react": "^16.13.1",
 		"react-bootstrap-icons": "^1.0.0",
 		"react-bootstrap-table-next": "^4.0.3",
@@ -19,6 +20,7 @@
 		"react-router-dom": "^5.2.0",
 		"react-scripts": "3.4.3",
 		"react-scrolling-nav": "^1.1.5",
+		"react-table": "^7.6.2",
 		"uuid": "^8.3.1",
 		"yup": "^0.32.1"
 	},
