--- a/niudot-app/package.json
+++ b/niudot-app/package.json
@@ -23,6 +23,7 @@
 		"react-scripts": "3.4.3",
 		"react-scrolling-nav": "^1.1.5",
 		"react-table": "^7.6.2",
+		"styled-components": "^5.2.1",
 		"uuid": "^8.3.1",
 		"yup": "^0.32.1"
 	},
