--- a/niudot-app/package.json
+++ b/niudot-app/package.json
@@ -17,6 +17,7 @@
 		"react-bootstrap-table2-toolkit": "^2.1.3",
 		"react-calendar": "^3.2.1",
 		"react-chartjs-2": "^2.11.1",
+		"react-datepicker": "^3.3.0",
 		"react-dom": "^16.13.1",
 		"react-icons": "^3.11.0",
 		"react-pro-sidebar": "^0.4.4",
