--- a/niudot-app/package.json
+++ b/niudot-app/package.json
@@ -9,13 +9,11 @@
 		"axios": "^0.21.0",
 		"chart.js": "^2.9.4",
 		"formik": "^2.1.7",
-		"namor": "^2.0.2",
 		"react": "^16.13.1",
 		"react-bootstrap-icons": "^1.0.0",
 		"react-bootstrap-table-next": "^4.0.3",
 		"react-bootstrap-table2-editor": "^1.4.0",
 		"react-bootstrap-table2-toolkit": "^2.1.3",
-		"react-calendar": "^3.2.1",
 		"react-chartjs-2": "^2.11.1",
 		"react-datepicker": "^3.3.0",
 		"react-dom": "^16.13.1",
@@ -23,19 +21,16 @@
 		"react-pro-sidebar": "^0.4.4",
 		"react-router-dom": "^5.2.0",
 		"react-scripts": "3.4.3",
-		"react-scrolling-nav": "^1.1.5",
 		"react-table": "^7.6.2",
-		"react-transition-group": "^4.4.1",
-		"styled-components": "^5.2.1",
 		"uuid": "^8.3.1",
 		"yup": "^0.32.1"
 	},
 	"scripts": {
-		"dev": "react-scripts start",
+		"start": "react-scripts start",
 		"build": "react-scripts build",
 		"test": "react-scripts test",
 		"eject": "react-scripts eject",
-		"build:tw": "tailwindcss-cli build ./src/styles/tailwind.css -o ./src/styles/main.css"
+		"tailwind": "tailwindcss-cli build ./src/styles/tailwind.css -o ./src/styles/main.min.css"
 	},
 	"eslintConfig": {
 		"extends": "react-app"
@@ -52,7 +47,6 @@
 			"last 1 safari version"
 		]
 	},
-	"proxy": "https://nicascriptproject.uc.r.appspot.com/",
 	"devDependencies": {
 		"babel-eslint": "^10.1.0",
 		"tailwindcss-cli": "^0.1.2"
