--- a/niudot-app/package.json
+++ b/niudot-app/package.json
@@ -50,5 +50,6 @@
 	"devDependencies": {
 		"babel-eslint": "^10.1.0",
 		"tailwindcss-cli": "^0.1.2"
-	}
+	},
+	"proxy": "https://backend-dot-nicascriptproject.uc.r.appspot.com/"
 }
