Added deploy script, that prepares the project for deploy

--- a/niudot-app/package.json
+++ b/niudot-app/package.json
@@ -30,7 +30,8 @@
 		"build": "react-scripts build",
 		"test": "react-scripts test",
 		"eject": "react-scripts eject",
-		"tailwind": "tailwindcss-cli build ./src/styles/tailwind.css -o ./src/styles/main.min.css"
+		"tailwind": "tailwindcss-cli build ./src/styles/tailwind.css -o ./src/styles/main.min.css",
+		"deploy": "export NODE_ENV=production && npm run tailwind && npm run build"
 	},
 	"eslintConfig": {
 		"extends": "react-app"
