--- a/niudot-app/package.json
+++ b/niudot-app/package.json
@@ -30,7 +30,8 @@
 		"start": "react-scripts start",
 		"test": "react-scripts test",
 		"eject": "react-scripts eject",
-		"tailwind": "tailwindcss-cli build ./src/styles/tailwind.css -o ./src/styles/main.min.css"
+		"tailwind": "tailwindcss-cli build ./src/styles/tailwind.css -o ./src/styles/main.min.css",
+		"build": "export NODE_ENV=production && npm run tailwind && react-scripts build"
 	},
 	"eslintConfig": {
 		"extends": "react-app"
