--- a/niudot-app/package.json
+++ b/niudot-app/package.json
@@ -19,6 +19,7 @@
 		"react-router-dom": "^5.2.0",
 		"react-scripts": "3.4.3",
 		"react-table": "^7.6.2",
+		"react-tooltip": "^4.2.11",
 		"react-transition-group": "^4.4.1",
 		"reactjs-popup": "^2.0.4",
 		"uuid": "^8.3.1",
