--- a/niudot-app/package.json
+++ b/niudot-app/package.json
@@ -30,8 +30,7 @@
 		"build": "export NODE_ENV=production && npm run tailwind && react-scripts build",
 		"test": "react-scripts test",
 		"eject": "react-scripts eject",
-		"tailwind": "tailwindcss-cli build ./src/styles/tailwind.css -o ./src/styles/main.min.css",
-		"build": "export NODE_ENV=production && npm run tailwind && react-scripts build"
+		"tailwind": "tailwindcss-cli build ./src/styles/tailwind.css -o ./src/styles/main.min.css"
 	},
 	"eslintConfig": {
 		"extends": "react-app"
