--- a/package.json
+++ b/package.json
@@ -1,26 +1,27 @@
 {
-  "name": "niudot",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
-  },
-  "dependencies": {
-    "autoprefixer": "^10.2.4",
-    "axios": "^0.21.1",
-    "formik": "^2.2.6",
-    "next": "10.0.6",
-    "postcss": "^8.2.6",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
-    "tailwindcss": "^2.0.3",
-    "yup": "^0.32.8"
-  },
-  "devDependencies": {
-    "@types/node": "^14.14.27",
-    "@types/react": "^17.0.2",
-    "typescript": "^4.1.5"
-  }
+	"name": "niudot",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start"
+	},
+	"dependencies": {
+		"autoprefixer": "^10.2.4",
+		"axios": "^0.21.1",
+		"formik": "^2.2.6",
+		"next": "10.0.6",
+		"postcss": "^8.2.6",
+		"react": "17.0.1",
+		"react-dom": "17.0.1",
+		"tailwindcss": "^2.0.3",
+		"yup": "^0.32.8"
+	},
+	"devDependencies": {
+		"@types/node": "^14.14.27",
+		"@types/react": "^17.0.2",
+		"typescript": "^4.1.5"
+	},
+	"proxy": "https://backend-dot-nicascriptproject.uc.r.appspot.com"
 }
