--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 		"autoprefixer": "^10.2.4",
 		"axios": "^0.21.1",
 		"formik": "^2.2.6",
+		"moment": "^2.29.1",
 		"next": "10.0.6",
 		"postcss": "^8.2.6",
 		"react": "17.0.1",
