--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"next": "10.0.6",
 		"postcss": "^8.2.6",
 		"react": "17.0.1",
+		"react-day-picker": "^7.4.8",
 		"react-dom": "17.0.1",
 		"react-icons": "^4.2.0",
 		"tailwindcss": "^2.0.3",
