--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 	},
 	"dependencies": {
 		"@tailwindcss/forms": "^0.2.1",
+		"@types/react-table": "^7.0.28",
 		"autoprefixer": "^10.2.4",
 		"axios": "^0.21.1",
 		"formik": "^2.2.6",
@@ -19,6 +20,7 @@
 		"react-day-picker": "^7.4.8",
 		"react-dom": "17.0.1",
 		"react-icons": "^4.2.0",
+		"react-table": "^7.6.3",
 		"tailwindcss": "^2.0.3",
 		"yup": "^0.32.8"
 	},
