--- a/package.json
+++ b/package.json
@@ -9,18 +9,22 @@
 	},
 	"dependencies": {
 		"@tailwindcss/forms": "^0.2.1",
+		"@types/react-redux": "^7.1.16",
 		"@types/react-table": "^7.0.28",
 		"autoprefixer": "^10.2.4",
 		"axios": "^0.21.1",
 		"formik": "^2.2.6",
 		"moment": "^2.29.1",
 		"next": "10.0.6",
+		"next-redux-wrapper": "^6.0.2",
 		"postcss": "^8.2.6",
 		"react": "17.0.1",
 		"react-day-picker": "^7.4.8",
 		"react-dom": "17.0.1",
 		"react-icons": "^4.2.0",
+		"react-redux": "^7.2.2",
 		"react-table": "^7.6.3",
+		"redux": "^4.0.5",
 		"tailwindcss": "^2.0.3",
 		"yup": "^0.32.8"
 	},
