--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"react-icons": "^4.2.0",
 		"react-redux": "^7.2.2",
 		"react-table": "^7.6.3",
+		"react-transition-group": "^4.4.1",
 		"redux": "^4.0.5",
 		"tailwindcss": "^2.0.3",
 		"yup": "^0.32.8"
