--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 		"@tailwindcss/forms": "^0.2.1",
 		"@types/react-redux": "^7.1.16",
 		"@types/react-table": "^7.0.28",
+		"@types/react-transition-group": "^4.4.0",
 		"autoprefixer": "^10.2.4",
 		"axios": "^0.21.1",
 		"formik": "^2.2.6",
