--- a/package.json
+++ b/package.json
@@ -36,6 +36,10 @@
 	"devDependencies": {
 		"@types/node": "^14.14.27",
 		"@types/react": "^17.0.2",
+		"@typescript-eslint/eslint-plugin": "^4.15.1",
+		"@typescript-eslint/parser": "^4.15.1",
+		"eslint": "^7.20.0",
+		"eslint-plugin-react": "^7.22.0",
 		"typescript": "^4.1.5"
 	},
 	"proxy": "https://backend-dot-nicascriptproject.uc.r.appspot.com"
