--- a/package.json
+++ b/package.json
@@ -12,15 +12,14 @@
 		"@types/react-redux": "^7.1.16",
 		"@types/react-table": "^7.0.28",
 		"@types/react-transition-group": "^4.4.0",
-		"autoprefixer": "^10.2.4",
 		"axios": "^0.21.1",
+		"eslint-config-prettier": "^8.0.0",
+		"eslint-plugin-prettier": "^3.3.1",
 		"formik": "^2.2.6",
 		"moment": "^2.29.1",
 		"next": "10.0.6",
 		"next-redux-wrapper": "^6.0.2",
-		"postcss": "^8.2.6",
 		"react": "17.0.1",
-		"react-day-picker": "^7.4.8",
 		"react-dom": "17.0.1",
 		"react-icons": "^4.2.0",
 		"react-redux": "^7.2.2",
@@ -30,16 +29,15 @@
 		"redux": "^4.0.5",
 		"redux-devtools-extension": "^2.13.8",
 		"redux-thunk": "^2.3.0",
-		"tailwindcss": "^2.0.3",
 		"yup": "^0.32.8"
 	},
 	"devDependencies": {
 		"@types/node": "^14.14.27",
 		"@types/react": "^17.0.2",
-		"@typescript-eslint/eslint-plugin": "^4.15.1",
 		"@typescript-eslint/parser": "^4.15.1",
-		"eslint": "^7.20.0",
-		"eslint-plugin-react": "^7.22.0",
+		"autoprefixer": "^10.2.4",
+		"postcss": "^8.2.6",
+		"tailwindcss": "^2.0.3",
 		"typescript": "^4.1.5"
 	},
 	"proxy": "https://backend-dot-nicascriptproject.uc.r.appspot.com"
