--- a/package.json
+++ b/package.json
@@ -5,7 +5,16 @@
 	"scripts": {
 		"dev": "next dev",
 		"build": "next build",
-		"start": "next start"
+		"start": "next start",
+		"lint": "pretty-quick --staged && lint-staged"
+	},
+	"husky": {
+		"hooks": {
+			"pre-commit": "yarn lint"
+		}
+	},
+	"lint-staged": {
+		"*.js": "eslint --cache --fix"
 	},
 	"dependencies": {
 		"@tailwindcss/forms": "^0.2.1",
@@ -13,8 +22,6 @@
 		"@types/react-table": "^7.0.28",
 		"@types/react-transition-group": "^4.4.0",
 		"axios": "^0.21.1",
-		"eslint-config-prettier": "^8.0.0",
-		"eslint-plugin-prettier": "^3.3.1",
 		"formik": "^2.2.6",
 		"moment": "^2.29.1",
 		"next": "10.0.6",
@@ -23,7 +30,6 @@
 		"react-dom": "17.0.1",
 		"react-icons": "^4.2.0",
 		"react-redux": "^7.2.2",
-		"react-scroll": "^1.8.1",
 		"react-table": "^7.6.3",
 		"react-transition-group": "^4.4.1",
 		"redux": "^4.0.5",
@@ -34,9 +40,22 @@
 	"devDependencies": {
 		"@types/node": "^14.14.27",
 		"@types/react": "^17.0.2",
+		"@typescript-eslint/eslint-plugin": "^4.15.1",
 		"@typescript-eslint/parser": "^4.15.1",
 		"autoprefixer": "^10.2.4",
+		"eslint": "^7.20.0",
+		"eslint-config-airbnb": "^18.2.1",
+		"eslint-config-prettier": "^8.0.0",
+		"eslint-plugin-import": "^2.22.1",
+		"eslint-plugin-jsx-a11y": "^6.4.1",
+		"eslint-plugin-prettier": "^3.3.1",
+		"eslint-plugin-react": "^7.22.0",
+		"eslint-plugin-react-hooks": "^4.2.0",
+		"husky": "=4",
+		"lint-staged": ">=10",
 		"postcss": "^8.2.6",
+		"prettier": "^2.2.1",
+		"pretty-quick": "^3.1.0",
 		"tailwindcss": "^2.0.3",
 		"typescript": "^4.1.5"
 	},
