--- a/package.json
+++ b/package.json
@@ -5,16 +5,12 @@
 	"scripts": {
 		"dev": "next dev",
 		"build": "next build",
-		"start": "next start",
-		"lint": "pretty-quick --staged && lint-staged"
+		"start": "next start"
 	},
 	"husky": {
 		"hooks": {
-			"pre-commit": "yarn lint"
+			"pre-commit": "echo \"[Husky] pre-commit\""
 		}
-	},
-	"lint-staged": {
-		"*.js": "eslint --cache --fix"
 	},
 	"dependencies": {
 		"@tailwindcss/forms": "^0.2.1",
@@ -40,22 +36,10 @@
 	"devDependencies": {
 		"@types/node": "^14.14.27",
 		"@types/react": "^17.0.2",
-		"@typescript-eslint/eslint-plugin": "^4.15.1",
-		"@typescript-eslint/parser": "^4.15.1",
 		"autoprefixer": "^10.2.4",
-		"eslint": "^7.20.0",
-		"eslint-config-airbnb": "^18.2.1",
-		"eslint-config-prettier": "^8.0.0",
-		"eslint-plugin-import": "^2.22.1",
-		"eslint-plugin-jsx-a11y": "^6.4.1",
-		"eslint-plugin-prettier": "^3.3.1",
-		"eslint-plugin-react": "^7.22.0",
-		"eslint-plugin-react-hooks": "^4.2.0",
-		"husky": "=4",
-		"lint-staged": ">=10",
+		"husky": "4.3.0",
 		"postcss": "^8.2.6",
 		"prettier": "^2.2.1",
-		"pretty-quick": "^3.1.0",
 		"tailwindcss": "^2.0.3",
 		"typescript": "^4.1.5"
 	},
