--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
 	"scripts": {
 		"dev": "next dev",
 		"build": "next build",
-		"start": "next start"
+		"start": "next start",
+		"postinstall": "husky install",
+		"lint": "prettier --write ."
 	},
 	"husky": {
 		"hooks": {
@@ -37,9 +39,9 @@
 		"@types/node": "^14.14.27",
 		"@types/react": "^17.0.2",
 		"autoprefixer": "^10.2.4",
-		"husky": "4.3.0",
+		"husky": "^5.0.9",
 		"postcss": "^8.2.6",
-		"prettier": "^2.2.1",
+		"prettier": "2.2.1",
 		"tailwindcss": "^2.0.3",
 		"typescript": "^4.1.5"
 	},
