--- a/.prettierrc
+++ b/.prettierrc
@@ -4,6 +4,7 @@
 	"bracketSpacing": true,
 	"quoteProps": "as-needed",
 	"singleQuote": true,
+	"jsxSingleQuote": true,
 	"tabWidth": 2,
 	"useTabs": true,
 	"printWidth": 80
