--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"@types/react-redux": "^7.1.16",
 		"@types/react-table": "^7.0.28",
 		"@types/react-transition-group": "^4.4.0",
+		"@types/uuid": "^8.3.0",
 		"axios": "^0.21.1",
 		"formik": "^2.2.6",
 		"moment": "^2.29.1",
@@ -28,6 +29,7 @@
 		"redux": "^4.0.5",
 		"redux-devtools-extension": "^2.13.8",
 		"redux-thunk": "^2.3.0",
+		"uuid": "^8.3.2",
 		"yup": "^0.32.8"
 	},
 	"devDependencies": {
