--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"next": "10.0.6",
 		"next-redux-wrapper": "^6.0.2",
 		"react": "17.0.1",
+		"react-bootstrap-icons": "^1.3.0",
 		"react-dom": "17.0.1",
 		"react-icons": "^4.2.0",
 		"react-redux": "^7.2.2",
