--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"moment": "^2.29.1",
 		"next": "10.0.6",
 		"next-redux-wrapper": "^6.0.2",
+		"next-themes": "^0.0.12",
 		"react": "17.0.1",
 		"react-bootstrap-icons": "^1.3.0",
 		"react-dom": "17.0.1",
