--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,14 @@
 		"resolveJsonModule": true,
 		"isolatedModules": true,
 		"jsx": "preserve",
-		"sourceMap": true
+		"sourceMap": true,
+		"baseUrl": ".",
+		"paths": {
+			"@/components/*": ["components/*"],
+			"@/data/*": ["data/*"],
+			"@/lib/*": ["lib/*"],
+			"@/context/*": ["context/*"]
+		}
 	},
 	"include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
 	"exclude": ["node_modules"]
