--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,8 @@
 			"@/components/*": ["components/*"],
 			"@/data/*": ["data/*"],
 			"@/lib/*": ["lib/*"],
-			"@/context/*": ["context/*"]
+			"@/context/*": ["context/*"],
+			"@/layout/*": ["layout/*"]
 		}
 	},
 	"include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
