--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,7 @@
 			"@/data/*": ["data/*"],
 			"@/lib/*": ["lib/*"],
 			"@/context/*": ["context/*"],
-			"@/layout/*": ["layout/*"]
+			"@/layouts/index*": ["widgets/*"]
 		}
 	},
 	"include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
