--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
 		"yup": "^0.32.8"
 	},
 	"devDependencies": {
+		"@tailwindcss/jit": "^0.1.17",
 		"@types/node": "^14.14.27",
 		"@types/react": "^17.0.2",
 		"autoprefixer": "^10.2.4",
