--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"next": "10.0.6",
 		"next-redux-wrapper": "^6.0.2",
 		"next-themes": "^0.0.12",
+		"preact": "^10.5.13",
 		"react": "17.0.1",
 		"react-bootstrap-icons": "^1.3.0",
 		"react-dom": "17.0.1",
@@ -39,9 +40,10 @@
 		"@types/node": "^14.14.27",
 		"@types/react": "^17.0.2",
 		"autoprefixer": "^10.2.4",
+		"globby": "^11.0.3",
 		"husky": "^5.0.9",
 		"postcss": "^8.2.6",
-		"prettier": "2.2.1",
+		"prettier": "^2.2.1",
 		"tailwindcss": "^2.0.3",
 		"typescript": "^4.1.5"
 	},
