--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"@types/react-transition-group": "^4.4.0",
 		"@types/uuid": "^8.3.0",
 		"axios": "^0.21.1",
+		"cors": "^2.8.5",
 		"formik": "^2.2.6",
 		"moment": "^2.29.1",
 		"next": "10.0.6",
@@ -37,6 +38,7 @@
 	},
 	"devDependencies": {
 		"@tailwindcss/jit": "^0.1.17",
+		"@types/cors": "^2.8.10",
 		"@types/node": "^14.14.27",
 		"@types/react": "^17.0.2",
 		"autoprefixer": "^10.2.4",
