--- a/package.json
+++ b/package.json
@@ -11,18 +11,19 @@
 	},
 	"dependencies": {
 		"@auth0/auth0-react": "^1.4.0",
+		"@auth0/nextjs-auth0": "^1.3.0",
 		"@tailwindcss/forms": "^0.2.1",
 		"@types/react-redux": "^7.1.16",
 		"@types/react-table": "^7.0.28",
 		"@types/react-transition-group": "^4.4.0",
 		"@types/uuid": "^8.3.0",
 		"axios": "^0.21.1",
-		"cors": "^2.8.5",
 		"formik": "^2.2.6",
 		"moment": "^2.29.1",
 		"next": "10.0.6",
 		"next-redux-wrapper": "^6.0.2",
 		"next-themes": "^0.0.12",
+		"nextjs-cors": "^1.0.5",
 		"preact": "^10.5.13",
 		"react": "17.0.1",
 		"react-bootstrap-icons": "^1.3.0",
