Working with JWT

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,6 +24,11 @@
 			"@/layouts/*": ["layouts/*"]
 		}
 	},
-	"include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+	"include": [
+		"next-env.d.ts",
+		"**/*.ts",
+		"**/*.tsx",
+		"pages/api/auth/[...auth0].js"
+	],
 	"exclude": ["node_modules"]
 }
